<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_encrypted_text" tools:context=".EncryptedTextActivity"
    android:id="@+id/encryptedTextMessage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/messageLabelEnc"
        android:id="@+id/messageLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageLabel"
        android:id="@+id/scrollViewEncrypted" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/encryptedText"
            android:layout_below="@+id/scrollViewEncrypted"
            android:layout_alignParentStart="true"
            android:hint="@string/encryptedHint" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearButtonEnc"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/scrollViewEncrypted"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
